// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveNavEntry renders a testcase in "failed" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-failedBadge_1i8mqax badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-failed_fshwig"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-failed_fshwig-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          8
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          1
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-6"
        class="svg-inline--fa fa-redo fa-w-16 entryButton_1wwl2v"
        data-icon="redo"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-6"
        >
          Run tests
        </title>
        <path
          d="M500.333 0h-47.411c-6.853 0-12.314 5.729-11.986 12.574l3.966 82.759C399.416 41.899 331.672 8 256.001 8 119.34 8 7.899 119.526 8 256.187 8.101 393.068 119.096 504 256 504c63.926 0 122.202-24.187 166.178-63.908 5.113-4.618 5.354-12.561.482-17.433l-33.971-33.971c-4.466-4.466-11.64-4.717-16.38-.543C341.308 415.448 300.606 432 256 432c-97.267 0-176-78.716-176-176 0-97.267 78.716-176 176-176 60.892 0 114.506 30.858 146.099 77.8l-101.525-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "not_run" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-7"
        class="svg-inline--fa fa-redo fa-w-16 entryButton_1wwl2v"
        data-icon="redo"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-7"
        >
          Run tests
        </title>
        <path
          d="M500.333 0h-47.411c-6.853 0-12.314 5.729-11.986 12.574l3.966 82.759C399.416 41.899 331.672 8 256.001 8 119.34 8 7.899 119.526 8 256.187 8.101 393.068 119.096 504 256 504c63.926 0 122.202-24.187 166.178-63.908 5.113-4.618 5.354-12.561.482-17.433l-33.971-33.971c-4.466-4.466-11.64-4.717-16.38-.543C341.308 415.448 300.606 432 256 432c-97.267 0-176-78.716-176-176 0-97.267 78.716-176 176-176 60.892 0 114.506 30.858 146.099 77.8l-101.525-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "passed" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-passedBadge_1isorc2 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-passed_159jltg"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-passed_159jltg-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          9
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-5"
        class="svg-inline--fa fa-redo fa-w-16 entryButton_1wwl2v"
        data-icon="redo"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-5"
        >
          Run tests
        </title>
        <path
          d="M500.333 0h-47.411c-6.853 0-12.314 5.729-11.986 12.574l3.966 82.759C399.416 41.899 331.672 8 256.001 8 119.34 8 7.899 119.526 8 256.187 8.101 393.068 119.096 504 256 504c63.926 0 122.202-24.187 166.178-63.908 5.113-4.618 5.354-12.561.482-17.433l-33.971-33.971c-4.466-4.466-11.64-4.717-16.38-.543C341.308 415.448 300.606 432 256 432c-97.267 0-176-78.716-176-176 0-97.267 78.716-176 176-176 60.892 0 114.506 30.858 146.099 77.8l-101.525-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "ready" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-1"
        class="svg-inline--fa fa-play fa-w-14 entryButton_1wwl2v"
        data-icon="play"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-1"
        >
          Run tests
        </title>
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "resetting" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-3"
        class="svg-inline--fa fa-redo fa-w-16 fa-spin inactiveEntryButton_104ny1c"
        data-icon="redo"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-3"
        >
          Resetting...
        </title>
        <path
          d="M500.333 0h-47.411c-6.853 0-12.314 5.729-11.986 12.574l3.966 82.759C399.416 41.899 331.672 8 256.001 8 119.34 8 7.899 119.526 8 256.187 8.101 393.068 119.096 504 256 504c63.926 0 122.202-24.187 166.178-63.908 5.113-4.618 5.354-12.561.482-17.433l-33.971-33.971c-4.466-4.466-11.64-4.717-16.38-.543C341.308 415.448 300.606 432 256 432c-97.267 0-176-78.716-176-176 0-97.267 78.716-176 176-176 60.892 0 114.506 30.858 146.099 77.8l-101.525-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "running" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-2"
        class="svg-inline--fa fa-redo fa-w-16 fa-spin inactiveEntryButton_104ny1c"
        data-icon="redo"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-2"
        >
          Running...
        </title>
        <path
          d="M500.333 0h-47.411c-6.853 0-12.314 5.729-11.986 12.574l3.966 82.759C399.416 41.899 331.672 8 256.001 8 119.34 8 7.899 119.526 8 256.187 8.101 393.068 119.096 504 256 504c63.926 0 122.202-24.187 166.178-63.908 5.113-4.618 5.354-12.561.482-17.433l-33.971-33.971c-4.466-4.466-11.64-4.717-16.38-.543C341.308 415.448 300.606 432 256 432c-97.267 0-176-78.716-176-176 0-97.267 78.716-176 176-176 60.892 0 114.506 30.858 146.099 77.8l-101.525-4.865c-6.845-.328-12.574 5.133-12.574 11.986v47.411c0 6.627 5.373 12 12 12h200.333c6.627 0 12-5.373 12-12V12c0-6.627-5.373-12-12-12z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders a testcase in "waiting" state 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="testcase"
    >
      C
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-4"
        class="svg-inline--fa fa-hourglass fa-w-12 fa-spin inactiveEntryButton_104ny1c"
        data-icon="hourglass"
        data-prefix="fas"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-4"
        >
          Waiting...
        </title>
        <path
          d="M360 64c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24 0 90.965 51.016 167.734 120.842 192C75.016 280.266 24 357.035 24 448c-13.255 0-24 10.745-24 24v16c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24v-16c0-13.255-10.745-24-24-24 0-90.965-51.016-167.734-120.842-192C308.984 231.734 360 154.965 360 64z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders an entry with environment status STARTED 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="multitest"
    >
      MT
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-11"
        class="svg-inline--fa fa-fast-backward fa-w-16 entryButton_1wwl2v"
        data-icon="fast-backward"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-11"
        >
          Reset MultiTest environment and report
        </title>
        <path
          d="M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-12"
        class="svg-inline--fa fa-toggle-on fa-w-18 entryButton_1wwl2v-o_O-environmentToggle_q5b348"
        data-icon="toggle-on"
        data-prefix="fas"
        role="img"
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-12"
        >
          Stop environment
        </title>
        <path
          d="M576 256c0 106.039-85.961 192-192 192H192C85.961 448 0 362.039 0 256S85.961 64 192 64h192c106.039 0 192 85.961 192 192zM384 128c-70.741 0-128 57.249-128 128 0 70.741 57.249 128 128 128 70.741 0 128-57.249 128-128 0-70.741-57.249-128-128-128"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-13"
        class="svg-inline--fa fa-play fa-w-14 entryButton_1wwl2v"
        data-icon="play"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-13"
        >
          Run tests
        </title>
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders an entry with environment status STARTING 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="multitest"
    >
      MT
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-14"
        class="svg-inline--fa fa-fast-backward fa-w-16 inactiveEntryButton_104ny1c"
        data-icon="fast-backward"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-14"
        >
          Reset MultiTest environment and report
        </title>
        <path
          d="M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
      <svg
        animation="none"
        aria-labelledby="svg-inline--fa-title-15"
        class="svg-inline--fa fa-toggle-on fa-w-18 inactiveEntryButton_104ny1c-o_O-environmentToggle_q5b348-o_O-busyEnvironmentToggle_2mo5qs"
        data-icon="toggle-on"
        data-prefix="fas"
        opacity="1"
        role="img"
        transition="opacity 0.175s ease-in-out"
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-15"
        >
          Environment starting...
        </title>
        <path
          d="M576 256c0 106.039-85.961 192-192 192H192C85.961 448 0 362.039 0 256S85.961 64 192 64h192c106.039 0 192 85.961 192 192zM384 128c-70.741 0-128 57.249-128 128 0 70.741 57.249 128 128 128 70.741 0 128-57.249 128-128 0-70.741-57.249-128-128-128"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-16"
        class="svg-inline--fa fa-play fa-w-14 inactiveEntryButton_104ny1c"
        data-icon="play"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-16"
        >
          Run tests
        </title>
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders an entry with environment status STOPPED 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="multitest"
    >
      MT
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-17"
        class="svg-inline--fa fa-fast-backward fa-w-16 entryButton_1wwl2v"
        data-icon="fast-backward"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-17"
        >
          Reset MultiTest environment and report
        </title>
        <path
          d="M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-18"
        class="svg-inline--fa fa-toggle-off fa-w-18 entryButton_1wwl2v-o_O-environmentToggle_q5b348"
        data-icon="toggle-off"
        data-prefix="fas"
        role="img"
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-18"
        >
          Start environment
        </title>
        <path
          d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-19"
        class="svg-inline--fa fa-play fa-w-14 entryButton_1wwl2v"
        data-icon="play"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-19"
        >
          Run tests
        </title>
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InteractiveNavEntry renders an entry with environment status STOPPING 1`] = `
<DocumentFragment>
  <div
    class="d-flex justify-content-between align-items-center"
    style="height: 1.5em; user-select: text;"
  >
    <span
      class="entryIcon_9gb3m5-o_O-unknownBadge_y8uc99 badge bg-secondary rounded-pill"
      title="multitest"
    >
      MT
    </span>
    <div
      class="entryName_1u6ioda-o_O-unknown_1vtq7dx"
      title="TestCaseDesc"
    >
      FakeTestcase
    </div>
    <div
      class="entryIcons_9stzon"
    >
      <span
        class="entryIcon_9gb3m5-o_O-unknown_1vtq7dx-o_O-navTime_rnvtmc"
      />
      <span
        class="entryIcon_9gb3m5"
        title="passed/unstable/failed testcases"
      >
        <span
          class="passed_159jltg"
        >
          0
        </span>
        /
        <span
          class="unstable_zxs7ca"
        />
        /
        <span
          class="failed_fshwig"
        >
          0
        </span>
      </span>
      <svg
        aria-labelledby="svg-inline--fa-title-20"
        class="svg-inline--fa fa-fast-backward fa-w-16 inactiveEntryButton_104ny1c"
        data-icon="fast-backward"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-20"
        >
          Reset MultiTest environment and report
        </title>
        <path
          d="M0 436V76c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v151.9L235.5 71.4C256.1 54.3 288 68.6 288 96v131.9L459.5 71.4C480.1 54.3 512 68.6 512 96v320c0 27.4-31.9 41.7-52.5 24.6L288 285.3V416c0 27.4-31.9 41.7-52.5 24.6L64 285.3V436c0 6.6-5.4 12-12 12H12c-6.6 0-12-5.4-12-12z"
          fill="currentColor"
        />
      </svg>
      <svg
        animation="pulsate 0.35s infinite"
        aria-labelledby="svg-inline--fa-title-21"
        class="svg-inline--fa fa-toggle-off fa-w-18 inactiveEntryButton_104ny1c-o_O-environmentToggle_q5b348-o_O-busyEnvironmentToggle_2mo5qs"
        data-icon="toggle-off"
        data-prefix="fas"
        opacity="0.5"
        role="img"
        transition="opacity 0.175s ease-in-out"
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-21"
        >
          Environment stopping...
        </title>
        <path
          d="M384 64H192C85.961 64 0 149.961 0 256s85.961 192 192 192h192c106.039 0 192-85.961 192-192S490.039 64 384 64zM64 256c0-70.741 57.249-128 128-128 70.741 0 128 57.249 128 128 0 70.741-57.249 128-128 128-70.741 0-128-57.249-128-128zm320 128h-48.905c65.217-72.858 65.236-183.12 0-256H384c70.741 0 128 57.249 128 128 0 70.74-57.249 128-128 128z"
          fill="currentColor"
        />
      </svg>
      <svg
        aria-labelledby="svg-inline--fa-title-22"
        class="svg-inline--fa fa-play fa-w-14 inactiveEntryButton_104ny1c"
        data-icon="play"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="svg-inline--fa-title-22"
        >
          Run tests
        </title>
        <path
          d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
